# testrepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: API.md  DEVELOPMENT.md  INSTALLATION.md  README.md
scripts/: setup.sh
src/myapp/: __init__.py  main.py
tests/: test_main.py
